Slide fixes - overriding pagination bullet css, no wrap on the three buttons above pagination

--- a/src/index.css
+++ b/src/index.css
@@ -191,11 +191,16 @@ nav {
 .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
 .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   background-color: white;
-
 }
 
 
+.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: 0px !important;
+  left: 0 !important;
+  right: 0 !important;
+  padding: 0 20px !important;
 
+}
 
 .shine {
   background: #222;
